Fixed settings overflow bug

--- a/pages/settings/index.scss
+++ b/pages/settings/index.scss
@@ -2,7 +2,10 @@ body{
 	width:600px;
 	height:600px;
 }
-
+.container{
+	height:100%;
+	overflow:scroll;
+}
 .panel{
 	.title{
 		h2{
